--- a/UWP-Desktop/UWP-Desktop.csproj
+++ b/UWP-Desktop/UWP-Desktop.csproj
@@ -95,10 +95,19 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainInfoPage.xaml.cs">
-      <DependentUpon>MainInfoPage.xaml</DependentUpon>
+    <Compile Include="EmpInfoPage.xaml.cs">
+      <DependentUpon>EmpInfoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BaseInfoPage.xaml.cs">
+      <DependentUpon>BaseInfoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="HomeInfoPage.xaml.cs">
+      <DependentUpon>HomeInfoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartupPage.xaml.cs">
+      <DependentUpon>StartupPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -121,9 +130,21 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainInfoPage.xaml">
+    <Page Include="EmpInfoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BaseInfoPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="HomeInfoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="StartupPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
