--- a/UWP-Desktop/UWP-Desktop.csproj
+++ b/UWP-Desktop/UWP-Desktop.csproj
@@ -104,6 +104,9 @@
     <Compile Include="HomeInfoPage.xaml.cs">
       <DependentUpon>HomeInfoPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PivotStylePage.xaml.cs">
+      <DependentUpon>PivotStylePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupPage.xaml.cs">
       <DependentUpon>StartupPage.xaml</DependentUpon>
@@ -116,6 +119,9 @@
     <None Include="UWP-Desktop_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\basic.png" />
+    <Content Include="Assets\home.png" />
+    <Content Include="Assets\office.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -139,6 +145,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="HomeInfoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PivotStylePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
