--- a/UWP-Desktop/UWP-Desktop.csproj
+++ b/UWP-Desktop/UWP-Desktop.csproj
@@ -116,6 +116,8 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <PRIResource Include="Strings\ja-JP\Resources.resw" />
+    <PRIResource Include="Strings\en-US\Resources.resw" />
     <None Include="UWP-Desktop_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +164,7 @@
       <Version>6.0.5</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
