--- a/UWP-Desktop/UWP-Desktop.csproj
+++ b/UWP-Desktop/UWP-Desktop.csproj
@@ -18,6 +18,10 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>UWP-Desktop_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>B7CA7CC1924FC1F77E085FE9E628706AB14E2616</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -104,6 +108,7 @@
     <Compile Include="HomeInfoPage.xaml.cs">
       <DependentUpon>HomeInfoPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\CmbModel.cs" />
     <Compile Include="PivotStylePage.xaml.cs">
       <DependentUpon>PivotStylePage.xaml</DependentUpon>
     </Compile>
@@ -161,7 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.0.5</Version>
+      <Version>6.0.8</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
